syntax = "proto2";

package dev.vhonta.content.processor.proto;

import "zio-temporal.proto";

message ProcessorConfiguration {
  required int64 processInterval = 1;
  required int64 jobTimeout = 2;
}

message SparkLaunchLocalPayload {
}
message SparkLaunchKubernetesPayload {
}

message SparkLauncherPayload {
  oneof sealed_value {
    SparkLaunchLocalPayload local = 1;
    SparkLaunchKubernetesPayload kubernetes = 2;
  }
}

message SparkLauncherParams {
  required string runId = 1;
  required int64 sparkJobTimeout = 2;
  required SparkLauncherPayload payload = 3;
}

message SparkReadResultsParams {
  required string runId = 1;
}

message ProcessingResult {
  required int64 integration = 1;
  required int64 date = 2;
  required int64 inserted = 3;
}

message SparkReadResultsValue {
  repeated ProcessingResult results = 1;
}