syntax = "proto2";

package dev.vhonta.news.processor.proto;

import "zio-temporal.proto";
import "news_feed.proto";
import "news_feed_recommendation.proto";

message ReaderWithTopic {
  required zio.temporal.protobuf.UUID readerId = 1;
  required zio.temporal.protobuf.UUID topicId = 2;
}

message AllReadersWithTopics {
  repeated ReaderWithTopic readersWithTopics = 1;
}

message LoadReaderParams {
  required zio.temporal.protobuf.UUID readerId = 1;
  required zio.temporal.protobuf.UUID topicId = 2;
  required int64 forDate = 3;
}

message ReaderWithArticles {
  required dev.vhonta.news.proto.Reader reader = 1;
  required dev.vhonta.news.proto.NewsFeedTopic topic = 2;
  repeated dev.vhonta.news.proto.NewsFeedArticle articles = 3;
}

message CheckRecommendationsExistParams {
  required ReaderWithTopic readerWithTopic = 1;
  required int64 forDate = 2;
}

message CheckRecommendationsExistResult {
  required bool exists = 1;
}

message RecommendationEngineParams {
  required ReaderWithArticles readerWithArticles = 1;
}

message RecommendationEngineResult {
  repeated zio.temporal.protobuf.UUID articleIds = 1;
}

message SaveRecommendationsParams {
  required ReaderWithTopic readerWithTopic = 1;
  required int64 forDate = 2;
  repeated zio.temporal.protobuf.UUID articleIds = 3;
}

message RecommendationsParams {
  required ReaderWithTopic readerWithTopic = 1;
  required int64 forDate = 2;
}